# tracksim

./: .gitignore  CMakeLists-Linux-Python3.10.txt  CMakeLists-Linux-Python3.9.txt  CMakeLists-Mac-Python3.12.txt  CMakeLists.txt  Doxyfile  README.md  arrow.cpp  arrow.h  collision.rlw  common.cpp  common.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramscene.pro  diagramtextitem.cpp  diagramtextitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mk  routeitem.cpp  routeitem.h  run  run-dark  runl  segment.cpp  segment.h  set-gdb.sh  simulator.py  store.cpp  store.h  test.rlw  trainitem.cpp  trainitem.h
docs/: .~lock.presentation.odp#  architecture.odg  demo_animation.xcf  directories.xcf  presentation.odp
python_int/: log.h  python_int.cpp  python_int.h  python_int.py  sim_classes.py  simitemid.h
simulator/: log.h  python_int.cpp  python_int.h  segment.cpp  segment.h  sim_store.py  simitemid.cpp  simitemid.h  simulator.cpp  simulator.h  simulator.py  simulator.py.blink  track.cpp  track.h  trackpoint.cpp  trackpoint.h  trackpoints.cpp  trackpoints.h  tracks.cpp  tracks.h
